# maintsight-pip

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PUBLISHING.md  README.md  __init__.py  cli.py  pyproject.toml  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md  COMMUNITY_STANDARDS_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: agent_development.md  bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: pr-check.yml  release.yml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  INTEGRATION_GUIDE.md  README.md  USER_GUIDE.md
models/: __init__.py  commit_data.py  file_stats.py  risk_category.py  risk_prediction.py  xgboost_model.pkl  xgboost_model.py  xgboost_model_metadata.json
scripts/: pre_publish.py
services/: __init__.py  feature_engineer.py  git_commit_collector.py  git_feature_extractor.py  post_processor.py  temporal_data_generator.py  xgboost_predictor.py
tests/: test_risk_category.py
utils/: __init__.py  database_client.py  html_generator.py  logger.py
